Bug 485094 - When click Scale button image disappears
Summary: When click Scale button image disappears
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.1
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
: 454016 470741 488049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-05 16:27 UTC by linux.admin
Modified: 2025-04-09 07:02 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description linux.admin 2024-04-05 16:27:36 UTC
Hi. Clean install of plasma 6 on Arch with wayland. Krdc connects and show image, when clicking Scale - image disappears. Unusable
Comment 1 Stefan Becker 2024-05-05 18:00:54 UTC
When krdc is running in "window mode", i.e. not full screen, there is only the "Scale" button. When you click that, the (VNC) session output is scaled down to 1x1, i.e. it "disappears".

I happened to switch the session to full screen mode and hold and behold: **there is a SLIDER right of the scale button!** It shows the wrong setting, i.e. 0%, but once you move the slider, the session output is correctly scaled.

And the best part is: now krdc remembers the chosen scale value for the session, i.e. when you next time open krdc and open the session it remembers the values correctly and the session is scaled. Now I can use my VNC session again on a high resolution display.

Fedora 40 x86_64
krdc 24.02.2 (with deadlock fix for VNC plugin applied)
KDE Frameworks 
Version 6.1.0
Qt 
Version 6.7.0 (built against 6.7.0)
The wayland windowing system
Comment 2 Akseli Lahtinen 2024-05-20 09:02:43 UTC
FWIW, can't reproduce this with the RDP connection
Comment 3 Steven Frank 2024-07-26 22:55:41 UTC
Just commenting to add that I also experience this behavior on a VNC connection, exactly as Stefan describes.  Can also confirm that going into full screen and moving the scale slider by any amount fixes the problem.

I believe this is the same issue as #488049.
Comment 4 Joshua Goins 2025-04-08 14:38:05 UTC
(In reply to Akseli Lahtinen from comment #2)
> FWIW, can't reproduce this with the RDP connection

The reason why is that the RDP connection uses a totally different method of scaling than VNC.
Comment 5 Joshua Goins 2025-04-08 14:38:42 UTC
*** Bug 470741 has been marked as a duplicate of this bug. ***
Comment 6 Joshua Goins 2025-04-08 14:38:49 UTC
*** Bug 488049 has been marked as a duplicate of this bug. ***
Comment 7 Joshua Goins 2025-04-08 14:39:25 UTC
*** Bug 454016 has been marked as a duplicate of this bug. ***
Comment 8 Bug Janitor Service 2025-04-08 14:52:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/krdc/-/merge_requests/175
Comment 9 Fabio 2025-04-09 06:53:41 UTC
Git commit ae2f8d4550d78ef975369cd59696099a86efbe03 by Fabio Bas, on behalf of Joshua Goins.
Committed on 09/04/2025 at 06:51.
Pushed by ctrlaltca into branch 'master'.

Fix scaling button not working out of the box

Note that this only seems to affect VNC connections, because it has its
own scaling setting.

There has been this bug for years now, where if you press the "Scale"
button in the toolbar that the image disappears. What is actually
happening is that there is a "scale factor" setting, which ranges from
100 to 200. (This is translated internally to 1x and 2x, respectively.)
The *default value* for this setting however was 0, which meant that it
scaled to the view to basically nothing. This makes absolutely no sense
as a default value, so it's changed to 100. As a workaround, you can
also change the scale factor using the slider, it's shown by default in
the fullscreen toolbar.

However, this fix doesn't change it for many users - who have collected
numerous VNC connections like me - and the scale setting is still 0.
Thankfully because this value is nonsense and can't be set in the UI, we
can detect it and remove it. I have tested this against a 24.12 KRDC and
can confirm it fixes scaling for connections made in that version.

Additionally, I have amended the doucmentation for the scaleFactor
setting so it's absolutely clear to everybody what the valid range for
it is.
VERSION-FIXED-IN: 25.04

M  +8    -1    core/hostpreferences.cpp
M  +1    -1    core/hostpreferences.h

https://invent.kde.org/network/krdc/-/commit/ae2f8d4550d78ef975369cd59696099a86efbe03
Comment 10 Fabio 2025-04-09 07:01:43 UTC
Git commit 04a82bbebdaa9b94f3afbebff0ab7534b887c7e3 by Fabio Bas.
Committed on 09/04/2025 at 06:54.
Pushed by ctrlaltca into branch 'release/25.04'.

Fix scaling button not working out of the box

Note that this only seems to affect VNC connections, because it has its
own scaling setting.

There has been this bug for years now, where if you press the "Scale"
button in the toolbar that the image disappears. What is actually
happening is that there is a "scale factor" setting, which ranges from
100 to 200. (This is translated internally to 1x and 2x, respectively.)
The *default value* for this setting however was 0, which meant that it
scaled to the view to basically nothing. This makes absolutely no sense
as a default value, so it's changed to 100. As a workaround, you can
also change the scale factor using the slider, it's shown by default in
the fullscreen toolbar.

However, this fix doesn't change it for many users - who have collected
numerous VNC connections like me - and the scale setting is still 0.
Thankfully because this value is nonsense and can't be set in the UI, we
can detect it and remove it. I have tested this against a 24.12 KRDC and
can confirm it fixes scaling for connections made in that version.

Additionally, I have amended the doucmentation for the scaleFactor
setting so it's absolutely clear to everybody what the valid range for
it is.
VERSION-FIXED-IN: 25.04


(cherry picked from commit ae2f8d4550d78ef975369cd59696099a86efbe03)

Co-authored-by: Joshua Goins <joshua.goins@kdab.com>

M  +8    -1    core/hostpreferences.cpp
M  +1    -1    core/hostpreferences.h

https://invent.kde.org/network/krdc/-/commit/04a82bbebdaa9b94f3afbebff0ab7534b887c7e3